--- a/document-structure/cart/task.css
+++ b/document-structure/cart/task.css
@@ -12,8 +12,7 @@ body {
 }
 .cart__product-count {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 91px;
   border: 2px solid green;
   border-radius: 50%;
   padding: 2px 5px;
